--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-"pandas" 
-"numpy" 
-"matplotlib" 
-"seaborn" 
-"pyarrow" 
-"jupyter" 
+numpy==1.26.4
+pandas==2.2.3
+ydata_profiling==v4.12.2
+matplotlib==3.10.0
+seaborn==0.13.2
+plotly==5.24.1
+kaleido==0.2.1
+IPython==8.27.0
